add new Clothe page and filter functional to this page

--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -362,7 +362,7 @@
                     <li><a href="#">Moncler x Pharrell</a></li>
                 </ul>
             </li>
-            <li><a href="#">Одежды</a>
+            <li><a href="/Clothes">Одежды</a>
                 <ul class="dropdown1">
                     <li><h5>ВЕРХНЯЯ ОДЕЖДА</h5></li>
                     <li><h5>ОБУВЬ</h5></li>
